--- a/Fsing/FThresholdsPaper/FThresholds.tex
+++ b/Fsing/FThresholdsPaper/FThresholds.tex
@@ -611,7 +611,7 @@ o51 = true
 \section{The {\tt fpt} function}
 \label{sec.FPT}
 
-The core function in the package \emph{FrobeniusThresholds} is the {\tt fpt} function.  Throughout this section, let $f$ be a polynomial with coefficients in a finite field of characteristic $p$. When passed the polynomial $f$, the function {\tt fpt} attempts to find the exact value for the $F$-pure threshold of $f$ at the origin, and returns that value, if possible.  Otherwise, it returns lower and upper bounds for the $F$-pure threshold, as demonstrated below.
+The core function in the package \emph{FrobeniusThresholds} is called {\tt fpt}.  Throughout this section, let $f$ be a polynomial with coefficients in a finite field of characteristic $p$. When passed the polynomial $f$, the function {\tt fpt} attempts to find the exact value for the $F$-pure threshold of $f$ at the origin, and returns that value, if possible.  Otherwise, it returns lower and upper bounds for the $F$-pure threshold, as demonstrated below.
 
 {\small
 \setstretch{.67}
@@ -638,36 +638,50 @@ o3 : List
 }
 \medspace
 
-If the option {\tt UseSpecialAlgorithms} is set to {\tt true} (the default value), then {\tt fpt} first checks whether $f$ is a monomial, a diagonal polynomial, a binomial, a form in two variables, or a product of factors in simple normal crossing, in that order.  The monomials and the simple normal crossing cases are computed as the reciprocal of maximal exponent of the factors.
-Outside of that simple case, algorithms of Hern\'andez \cite{HernandezFInvariantsOfDiagonalHyp, HernandezFPureThresholdOfBinomial}, or Hern\'andez and Teixeira \cite{HernandezTeixeiraFThresholdFunctions},  are executed to compute the $F$-pure threshold (cf. \cite{ShibutaTakagiLCThresholds}).
+\subsection*{The option {\tt UseSpecialAlgorithms} for the {\tt fpt} function}
+
+The {\tt fpt} function has the option {\tt UseSpecialAlgorithms}.  When
+set to {\tt true} (the default value), {\tt fpt} first checks whether $f$ is a monomial, a diagonal polynomial, a binomial, a form in two variables, or a product of factors in simple normal crossing, in that order. 
+When $f$ is a monomial, say, $x_1^{a_n}\cdots x_n^{a_n}$, then its $F$-pure threshold is quickly computed as the minimum among the $1/a_i$.
+When $f$ is a a diagonal polynomial, a binomial, a form in two variables, 
+algorithms of Hern\'andez \cite{HernandezFInvariantsOfDiagonalHyp, HernandezFPureThresholdOfBinomial}, or Hern\'andez and Teixeira \cite{HernandezTeixeiraFThresholdFunctions},  are executed to compute the $F$-pure threshold (cf. \cite{ShibutaTakagiLCThresholds}).  
 
 {\small
 \setstretch{.67}
 \begin{MyVerbatim}
 
-i4 : fpt(x^17 + y^20 + z^24) -- a diagonal polynomial
+i4 : fpt(x^3*y^4*z^5) -- a monomial
+
+      1
+o4 = -
+      5
+
+o4 : QQ
+
+
+i5 : fpt(x^17 + y^20 + z^24) -- a diagonal polynomial
 
       94
-o4 = ---
+o5 = ---
      625
 
-i5 : fpt(x^2*y^6*z^10 + x^10*y^5*z^3) -- a binomial
+i6 : fpt(x^2*y^6*z^10 + x^10*y^5*z^3) -- a binomial
 
       997
-o5 = ----
+o6 = ----
      6250
 
-o5 : QQ
+o6 : QQ
 
-i6 : ZZ/5[x,y];
+i7 : ZZ/5[x,y];
 
-i7 : fpt(x^2*y^6*(x + y)^9*(x + 3*y)^10) -- a form in two variables
+i8 : fpt(x^2*y^6*(x + y)^9*(x + 3*y)^10) -- a form in two variables
 
       5787
-o7 = -----
+o8 = -----
      78125
 
-o7 : QQ
+o8 : QQ
 \end{MyVerbatim}
 }
 \medspace
@@ -678,19 +692,21 @@ The above noted algorithm for computing the $F$-pure threshold of a binary form 
 \setstretch{.67}
 \begin{MyVerbatim}
 
-i8 : L = {x, y, x + y, x + 3*y};
+i9 : L = {x, y, x + y, x + 3*y};
 
-i9 : m = {2, 6, 9, 10};
+i10 : m = {2, 6, 9, 10};
 
-i10 : fpt(L, m) == o7
+i11 : fpt(L, m) == o7
 
-o10 = true
+o11 = true
 \end{MyVerbatim}
 }
 \medspace
 
-If {\tt UseSpecialAlgorithms} is set to {\tt true} and $f$ does not fall into any of the three forementioned cases, then the function {\tt fpt} next calls {\tt isSimpleNormalCrossing(f)} to check whether the polynomial $f$ is a product of factors that are in simple normal crossing.  If this command returns {\tt true}, the $F$-pure threshold can easily be computed, and {\tt fpt} returns this value.  For more detail on the function {\tt isSimpleNormalCrossing} and on computing the $F$-pure threshold of a polynomial with simple normal crossings, please see the end of this section. 
+If {\tt UseSpecialAlgorithms} is set to {\tt true} and $f$ does not fall into any of the four forementioned cases, then the function {\tt fpt} next calls {\tt isSimpleNormalCrossing(f)} to check whether the polynomial $f$ is a product of factors that are in simple normal crossing.  If this command returns {\tt true}, the $F$-pure threshold can easily be computed, and {\tt fpt} returns this value.  For more detail on the function {\tt isSimpleNormalCrossing} and on computing the $F$-pure threshold of a polynomial with simple normal crossings, please see the end of this section.
 
+
+\subsection*{Searching for the $F$-pure threshold when no special algorithm applies}
 
 
 In the remainder of this section, we describe the {\tt fpt} function when no special algorithm is available, or {\tt UseSpecialAlgorithms} is set to {\tt false},  as well as the roles of the options {\tt DepthOfSearch}, and {\tt Attempts}, both nonnegative integers.
