--- a/Fsing/FThresholdsPaper/FThresholds.tex
+++ b/Fsing/FThresholdsPaper/FThresholds.tex
@@ -645,6 +645,7 @@ set to {\tt true} (the default value), {\tt fpt} first checks whether $f$ is a m
 When $f$ is a monomial, say, $x_1^{a_n}\cdots x_n^{a_n}$, then its $F$-pure threshold is quickly computed as the minimum among the $1/a_i$.
 When $f$ is a a diagonal polynomial, a binomial, a form in two variables, 
 algorithms of Hern\'andez \cite{HernandezFInvariantsOfDiagonalHyp, HernandezFPureThresholdOfBinomial}, or Hern\'andez and Teixeira \cite{HernandezTeixeiraFThresholdFunctions},  are executed to compute the $F$-pure threshold (cf. \cite{ShibutaTakagiLCThresholds}).  
+Consider examples of each of these cases below.
 
 {\small
 \setstretch{.67}
@@ -706,13 +707,11 @@ o11 = true
 If {\tt UseSpecialAlgorithms} is set to {\tt true} and $f$ does not fall into any of the four forementioned cases, then the function {\tt fpt} next calls {\tt isSimpleNormalCrossing(f)} to check whether the polynomial $f$ is a product of factors that are in simple normal crossing.  If this command returns {\tt true}, the $F$-pure threshold can easily be computed, and {\tt fpt} returns this value.  For more detail on the function {\tt isSimpleNormalCrossing} and on computing the $F$-pure threshold of a polynomial with simple normal crossings, please see the end of this section.
 
 
-\subsection*{Searching for the $F$-pure threshold when no special algorithm applies}
-
+\subsection*{How {\tt fpt} proceeds when no special algorithm applies}
 
 In the remainder of this section, we describe the {\tt fpt} function when no special algorithm is available, or {\tt UseSpecialAlgorithms} is set to {\tt false},  as well as the roles of the options {\tt DepthOfSearch}, and {\tt Attempts}, both nonnegative integers.
 
 In this case, very roughly speaking, the {\tt fpt} function will either compute, and output, the exact value of the $F$-pure threshold of $f$, and otherwise recursively compute a finite sequence of lower and upper bounds for this value, and output the last of these, which will be the tightest among all computed.  The value of the option {\tt DepthOfSearch} determines the precision of the initial set of bounds, and the option {\tt Attempts}, in conjunction with some various subroutines, determines whether, and how, to produce new, tighter bounds from the previous ones.
-
 
 In more detail, let $e$ denote the value of the option {\tt DepthOfSearch}, which conservatively defaults to {\tt 1}.  The {\tt fpt} function first computes $\nu=\nu_f(p^e)$, which agrees with the output of {\tt nu(e,f)}.  It is well known that the $F$-pure threshold of $f$ is greater than $\nu/p^e$ and at most $(\nu+1)/p^e$, and applying  \cite[Proposition 4.2]{HernandezFPurityOfHypersurfaces} to this lower bound tells us that the $F$-pure threshold of $f$ must be at least $\nu/(p^e-1)$.  In summary, we know that the $F$-pure threshold of $f$ must lie in the closed interval
 %
@@ -747,7 +746,6 @@ o13 = {---, ---}
 o13 : List
 
 i14 : fpt(f, Attempts => 1, DepthOfSearch => 3) -- the right-hand
-
       endpoint (nu+1)/p^e is the F-pure threshold
 
        22
@@ -759,7 +757,7 @@ o14 : QQ
 \end{MyVerbatim}
 }
 
-If  {\tt Attempts} is set to at least {\tt 2} and the right-hand endpoint $(\nu+1)/p^e$ of the interval \eqref{estimating-interval: e} is not the $F$-pure threshold, then a second check is run to verify whether the left-hand endpoint $\nu/(p^e-1)$ of this interval is the $F$-pure threshold.
+If {\tt Attempts} is set to at least {\tt 2} and the right-hand endpoint $(\nu+1)/p^e$ of the interval \eqref{estimating-interval: e} is not the $F$-pure threshold, then a second check is run to verify whether the left-hand endpoint $\nu/(p^e-1)$ of this interval is the $F$-pure threshold.
 
 {\small
 \setstretch{.67}
@@ -776,7 +774,6 @@ o16 = {--, --}
 o16 : List
 
 i17 : fpt(f, Attempts => 2, DepthOfSearch => 3) -- the left-hand endpoint
-
       nu/(p^e-1) is the F-pure threshold
 
       17
@@ -788,8 +785,9 @@ o17 : QQ
 \end{MyVerbatim}
 }
 
-If neither endpoint is the $F$-pure threshold and {\tt Attempts} is set to more than {\tt 2}, then  additional checks are performed at certain numbers within the interval, chosen according to the criteria determined by the value of the option {\tt GuessStrategy}.  We refer the reader for the documentation of this strategy for more details.
-
+If neither endpoint is the $F$-pure threshold and {\tt Attempts} is set to more than {\tt 2}, then  additional checks are performed at certain numbers within the interval.
+A number in the interval is selected, according to criteria specified by the option \textcolor{red}{{\tt GuessStrategy}}, and the function {\tt compareFPT} is used to test that number. If this ``guess'' is correct, its value is returned. Otherwise, the information returned by {\tt  compareFPT} is used to narrow down the interval, and this process is repeated as many times as specified by the value of {\tt Attempts}.
+            
 {\color{red}  This will need to be updated.  Maybe look at Pedro's new documentation.}
 
 {\small
@@ -806,19 +804,17 @@ o19 = {--, ---}
 
 o19 : List
 
-i20 : fpt(f, DepthOfSearch => 3, Attempts => 3) -- an additional check
+i20 : fpt(f, DepthOfSearch => 3, Attempts => 4) -- more attempts *always*
+      improve the estimate
 
-      sharpens the estimate
-
-        3   1
+        1   4
 o20 = {--, --}
-       62  18
+       20  75
 
 o20 : List
 
-i21 : fpt(f, DepthOfSearch => 3, Attempts => 4) -- and one more finds
-
-      the answer
+i21 : fpt(f, DepthOfSearch => 3, Attempts => 4, GuessStrategy => denominator) 
+      -- the exact answer, after a change of strategy
 
        1
 o21 = --
@@ -829,123 +825,164 @@ o21 : QQ
 }
 \medspace
 
-If {\tt guessFPT} is unsuccessful and {\tt UseFSignature} is set to {\tt true}, then the {\tt fpt} function proceeds to use the convexity of the $F$-signature function and a secant line argument to attempt to narrow down the interval bounding the $F$-pure threshold.
+The option {\tt Bounds} allows the user to specify known lower and upper bounds for the $F$-pure threshold of $f$, in order to speed up computations or to refine previously obtained estimates. 
 
 {\small
 \setstretch{.67}
 \begin{MyVerbatim}
 
-i22 : f = x^5*y^6*(x + y)^9*(x^2 + y^3)^4;
+i67 : f = x^7*y^5*(x + y)^5*(x^2 + y^3)^4;
 
-i23 : fpt(f, DepthOfSearch => 3)
+i68 : fpt(f, DepthOfSearch => 3, Attempts => 5)
 
-        2   1
-o23 = {--, --}
-       31  14
 
-o23 : List
+        3   1
+o68 = {--, --}
+       40  13
 
-i24 : fpt(f, DepthOfSearch => 3, UseFSignature => true)
+o68 : List
 
-        181   1
-o24 = {----, --}
-       2750  14
-
-o24 : List
-
-i25 : numeric o23
-
-o25 = {.0645161, .0714286}
-
-o25 : List
-
-i26 : numeric o24 -- UseFSignature sharpened the estimate a bit
-
-o26 = {.0658182, .0714286}
-
-o26 : List
-\end{MyVerbatim}
-}
-\medspace
-
-When {\tt FRegularityCheck} is set to {\tt true} and no exact answer has been found, a final check is run to verify whether the final lower bound for the $F$-pure threshold is the exact answer (if it has not already been eliminated as a possibility).
-
-{\small
-\setstretch{.67}
-\begin{MyVerbatim}
-
-i27 : f = (x + y)^4*(x^2 + y^3)^6;
-
-i28 : fpt( f, Attempts => 2, DepthOfSearch => 3 )
-
-        3   13
-o28 = {--, ---}
-       31  125
-
-o28 : List
-
-i29 : fpt(f, Attempts => 2, DepthOfSearch => 3, UseFSignature => true)
-
-      -- UseFSignature improves the answer a bit
-
-        1   13
-o29 = {--, ---}
-       10  125
-
-o29 : List
-
-i30 : fpt(f, Attempts => 2, DepthOfSearch => 3, UseFSignature => true,
-
-      FRegularityCheck => true) -- FRegularityCheck finds the answer
-
-       1
-o30 = --
-      10
-
-o30 : QQ
-\end{MyVerbatim}
-}
-\medspace
-
-The computations performed when {\tt UseFSignature} and {\tt FRegularityCheck} are set to {\tt true} are often slow, and often fail to improve the estimate, and for this reason, these options should be used sparingly.
-            It is often more effective to increase the values of {\tt Attempts} or {\tt DepthOfSearch} instead.
-
-{\small
-\setstretch{.67}
-\begin{MyVerbatim}
-
-i31 : f = x^7*y^5*(x + y)^5*(x^2 + y^3)^4;
-
-i32 : timing numeric fpt(f, DepthOfSearch => 3, UseFSignature => true,
-
-      FRegularityCheck => true)
-
-o32 = {.0733061, .0769231}
-      -- 2.68899 seconds
-
-o32 : Time
-
-i33 : timing numeric fpt(f, Attempts => 5, DepthOfSearch => 3) -- a better
-
-      answer in less time
-
-o33 = {.075, .0769231}
-      -- .893389 seconds
-
-o33 : Time
-
-i34 : timing fpt(f, DepthOfSearch => 4) -- the exact answer in even less
-      time
+i69 : fpt(f, DepthOfSearch => 3, Attempts => 5, Bounds => oo)
 
        48
-o34 = ---
+o69 = ---
       625
-      -- .361882 seconds
 
-o34 : Time
+o69 : QQ
 \end{MyVerbatim}
 }
 \medspace
+
+
+% f = x^7*y^5*(x + y)^5*(x^2 + y^3)^4;
+% fpt(f, DepthOfSearch => 3, Attempts => 5)
+% fpt(f, DepthOfSearch => 3, Attempts => 5, Bounds => oo) 
+            
+            
+% If {\tt guessFPT} is unsuccessful and {\tt UseFSignature} is set to {\tt true}, then the {\tt fpt} function proceeds to use the convexity of the $F$-signature function and a secant line argument to attempt to narrow down the interval bounding the $F$-pure threshold.
+% 
+% {\small
+% \setstretch{.67}
+% \begin{MyVerbatim}
+% 
+% i22 : f = x^5*y^6*(x + y)^9*(x^2 + y^3)^4;
+% 
+% i23 : fpt(f, DepthOfSearch => 3)
+% 
+%         2   1
+% o23 = {--, --}
+%        31  14
+% 
+% o23 : List
+% 
+% i24 : fpt(f, DepthOfSearch => 3, UseFSignature => true)
+% 
+%         181   1
+% o24 = {----, --}
+%        2750  14
+% 
+% o24 : List
+% 
+% i25 : numeric o23
+% 
+% o25 = {.0645161, .0714286}
+% 
+% o25 : List
+% 
+% i26 : numeric o24 -- UseFSignature sharpened the estimate a bit
+% 
+% o26 = {.0658182, .0714286}
+% 
+% o26 : List
+% \end{MyVerbatim}
+% }
+% \medspace
+% 
+% When {\tt FRegularityCheck} is set to {\tt true} and no exact answer has been found, a final check is run to verify whether the final lower bound for the $F$-pure threshold is the exact answer (if it has not already been eliminated as a possibility).
+% 
+% {\small
+% \setstretch{.67}
+% \begin{MyVerbatim}
+% 
+% i27 : f = (x + y)^4*(x^2 + y^3)^6;
+% 
+% i28 : fpt( f, Attempts => 2, DepthOfSearch => 3 )
+% 
+%         3   13
+% o28 = {--, ---}
+%        31  125
+% 
+% o28 : List
+% 
+% i29 : fpt(f, Attempts => 2, DepthOfSearch => 3, UseFSignature => true)
+% 
+%       -- UseFSignature improves the answer a bit
+% 
+%         1   13
+% o29 = {--, ---}
+%        10  125
+% 
+% o29 : List
+% 
+% i30 : fpt(f, Attempts => 2, DepthOfSearch => 3, UseFSignature => true,
+% 
+%       FRegularityCheck => true) -- FRegularityCheck finds the answer
+% 
+%        1
+% o30 = --
+%       10
+% 
+% o30 : QQ
+% \end{MyVerbatim}
+% }
+% \medspace
+% 
+% The computations performed when {\tt UseFSignature} and {\tt FRegularityCheck} are set to {\tt true} are often slow, and often fail to improve the estimate, and for this reason, these options should be used sparingly.
+%             It is often more effective to increase the values of {\tt Attempts} or {\tt DepthOfSearch} instead.
+% 
+% {\small
+% \setstretch{.67}
+% \begin{MyVerbatim}
+% 
+% i31 : f = x^7*y^5*(x + y)^5*(x^2 + y^3)^4;
+% 
+% i32 : timing numeric fpt(f, DepthOfSearch => 3, UseFSignature => true,
+% 
+%       FRegularityCheck => true)
+% 
+% o32 = {.0733061, .0769231}
+%       -- 2.68899 seconds
+% 
+% o32 : Time
+% 
+% i33 : timing numeric fpt(f, Attempts => 5, DepthOfSearch => 3) -- a better
+% 
+%       answer in less time
+% 
+% o33 = {.075, .0769231}
+%       -- .893389 seconds
+% 
+% o33 : Time
+% 
+% i34 : timing fpt(f, DepthOfSearch => 4) -- the exact answer in even less
+%       time
+% 
+%        48
+% o34 = ---
+%       625
+%       -- .361882 seconds
+% 
+% o34 : Time
+% \end{MyVerbatim}
+% }
+% \medspace
+
+If {\tt guessFPT} is unsuccessful and {\tt FinalAttempt} is set to {\tt true}, the fpt function proceeds to use the convexity of the $F$-signature function and a secant line argument to attempt to narrow down the interval bounding the $F$-pure threshold.
+If successful, the new lower bound may coincide with the upper bound, in which case we can conclude that it is the desired $F$-pure threshold.
+If that is not the case, an $F$-regularity check is done at the new lower bound, to verify if it is the $F$-pure threshold.            
+
+
+
 
 As seen in several examples above, when the exact  $F$-pure threshold of $f$ is not found, a list containing the endpoints of an interval containing its value is returned.  Whether that interval is open, closed, or a mixed interval depends on the options passed; if the option {\tt Verbose} is set to {\tt true}, the precise interval will be printed.
 
@@ -1052,54 +1089,69 @@ If the user sets its option {\tt IsLocal} to {\tt true} (its default value is {\
 
 i1 : R = QQ[x, y, z];
 
-i2 : f = (y - (x-1)^2)*y^2; --SNC at the origin, but not globally
+i2 : f = (y - (x-1)^2)*y^2; -- SNC at the origin, but not globally
 
 i3 : isSimpleNormalCrossing(f)
 
 o3 = true
 
-i4 : isSimpleNormalCrossing(f, IsLocal=>false)
+i4 : fpt(f)
 
-o4 = false
+     1
+o4 = -
+     2
 
-i5 : g = (y-1)^2+(x-7)^2 --doesn't even pass through the origin
+i5 : isSimpleNormalCrossing(f, IsLocal=>false)
+
+o5 = false
+
+i6 : g = (y-1)^2 + (x-7)^2 -- doesn't even pass through the origin
 
        2    2
-o5 = x  + y  - 14x - 2y + 50
+o6 = x  + y  - 14x - 2y + 50
 
-o5 : R
+o6 : R
 
-i6 : isSimpleNormalCrossing(g)
+i7 : isSimpleNormalCrossing(g)
 
-o6 = true
+o7 = true
 
-i7 : isSimpleNormalCrossing(g, IsLocal=>false)
+i8 : isSimpleNormalCrossing(g, IsLocal=>false)
 
-o7 = false
+o8 = false
 
-i8 : h = x*y^2*(x+1)^3*(y-1)^4; --SNC everywhere
+i9 : h = x*y^2*(x+1)^3*(y-1)^4; --SNC everywhere
 
-i9 : isSimpleNormalCrossing(h)
-
-o9 = true
-
-i10 : isSimpleNormalCrossing(h, IsLocal=>false)
+i10 : isSimpleNormalCrossing(h)
 
 o10 = true
+
+i11 : isSimpleNormalCrossing(h, IsLocal=>false)
+
+o11 = true
 \end{MyVerbatim}
 }
 \medspace
 
 
-%             R = QQ[x,y,z];
-%             f = (y - (x-1)^2)*y^2; --SNC at the origin, but not globally
-%             isSimpleNormalCrossing(f)
-%             isSimpleNormalCrossing(f, IsLocal=>false)
-%             g = (y-1)^2+(x-7)^2 --doesn't even pass through the origin
-%             isSimpleNormalCrossing(g)
-%             isSimpleNormalCrossing(g, IsLocal=>false)
-%             h = x*y^2*(x+1)^3*(y-1)^4; --SNC everywhere
-%             isSimpleNormalCrossing(h)
+%             R = QQ[x,y,z];
+
+%             f = (y - (x-1)^2)*y^2; --SNC at the origin, but not globally
+
+%             isSimpleNormalCrossing(f)
+
+%             isSimpleNormalCrossing(f, IsLocal=>false)
+
+%             g = (y-1)^2+(x-7)^2 --doesn't even pass through the origin
+
+%             isSimpleNormalCrossing(g)
+
+%             isSimpleNormalCrossing(g, IsLocal=>false)
+
+%             h = x*y^2*(x+1)^3*(y-1)^4; --SNC everywhere
+
+%             isSimpleNormalCrossing(h)
+
 %             isSimpleNormalCrossing(h, IsLocal=>false)
 
 \newpage
