--- a/Fsing/FThresholdsPaper/FThresholds.tex
+++ b/Fsing/FThresholdsPaper/FThresholds.tex
@@ -109,6 +109,7 @@ urlcolor=OliveGreen
 %This is for Karl
 %{\color{red}  Point out for people interested in computing log canonical thresholds:  Zhixian Zhou apparently proved in her thesis that the $F$-pure threshold for hypersurfaces is always a lower bound for the log canonical threshold.  Therefore, this package effectively computes such lower bounds, and is much faster than the \emph{Dmodules} package, which appears to be the only package in Macaulay2 that computes log canonical thresholds.}
 
+SANITY TEST FOR DANIEL
 
 This paper describes the \emph{Macaulay2} \cite{M2} package \emph{FrobeniusThresholds} \cite{FThresholdsPackage}, which provides tools for computing certain fundamental invariants arising in positive characteristic commutative algebra.  More precisely, this package concerns the effective computation of \emph{$F$-pure thresholds}, \emph{$F$-thresholds}, and \emph{$F$-jumping exponents}.
 
