Work on the paper

--- a/Fsing/FThresholdsPaper/FThresholds.tex
+++ b/Fsing/FThresholdsPaper/FThresholds.tex
@@ -106,12 +106,6 @@ urlcolor=OliveGreen
 
 \section{Introduction}
 
-%This is for Karl
-%{\color{red}  Point out for people interested in computing log canonical thresholds:  Zhixian Zhou apparently proved in her thesis that the $F$-pure threshold for hypersurfaces is always a lower bound for the log canonical threshold.  Therefore, this package effectively computes such lower bounds, and is much faster than the \emph{Dmodules} package, which appears to be the only package in Macaulay2 that computes log canonical thresholds.}
-
-SANITY TEST FOR DANIEL
-DANIEL MODIFYING THE PAPER AFTER EMILY
-
 This paper describes the \emph{Macaulay2} \cite{M2} package \emph{FrobeniusThresholds} \cite{FThresholdsPackage}, which provides tools for computing certain fundamental invariants arising in positive characteristic commutative algebra.  More precisely, this package concerns the effective computation of \emph{$F$-pure thresholds}, \emph{$F$-thresholds}, and \emph{$F$-jumping exponents}.
 
 Recall that a ring of prime characteristic $p>0$ is said to be \emph{$F$-pure} if the Frobenius map|that is, the ring endomorphism sending an element to its $p$-th power|is a pure morphism;  under natural geometric hypotheses, this is equivalent to the condition that the Frobenius morphism splits as a map of rings.
@@ -121,14 +115,16 @@ The concept of $F$-purity has proven to be important in commutative algebra, and
 After the advent of tight closure \cite{HochsterHunekeTC1}, the usage of Frobenius to quantify singularity|that is, deviation from regularity|proliferated, and based on a connection discovered between $F$-pure and \emph{log canonical} singularities \cite{HaraWatanabeFRegFPure}, the concept of $F$-purity was generalized to the context of \emph{pairs}.
 % $(R, f^t)$, where $f$ is an element of $R$, and $t$ is a nonnegative real number considered a formal exponent.
 
-Along these lines, the \emph{$F$-pure threshold} (fpt)%associated to an element of $R$
-was defined in analogy with the \emph{log canonical threshold} (lct) \cite{TakagiWatanabeFPureThresh}, and
+Along these lines, the \emph{$F$-pure threshold} %associated to an element of $R$
+was defined in analogy with the \emph{log canonical threshold} \cite{TakagiWatanabeFPureThresh}, and
 %The $F$-pure threshold of the pair $(R, f)$ is the supremum over all $t$ for which $(R, f^t)$ is $F$-pure.
 \emph{$F$-threholds} were then introduced as a family of invariants that naturally extend the notion of an $F$-pure threshold \cite{MustataTakagiWatanabeFThresholdsAndBernsteinSato}.
 
-Unfortunately, the $F$-pure threshold is typically difficult to calculate, even in many concrete cases.   It is also not so well understood from the perspective of reduction to prime characteristic.   Nevertheless, $F$-pure thresholds have been the focus of intense study over the past 15 years, and the \emph{Macaulay2} package \emph{FrobeniusThresholds} is centered around calculating and estimating the $F$-pure threshold and other $F$-thresholds, with the function {\tt fpt} at its core.
+Though the $F$-pure threshold is defined in analogy with the log canonical threshold, their connection extends beyond mere analogy. For example, suppose $h$ is a polynomial with integer coefficients, and that $h_p$ is the polynomial obtained by reducing the coefficients of $h$ modulo a prime $p$.  Then, the $F$-pure thresholds of the reductions $h_p$ limit to the log canonical threshold of $h$ as $p$ tends to infinity \cite{HaraYoshidaGeneralizationOfTightClosure}.    A related result is that of Z.~Zhu, who proved in  \cite[Corollary 4.2]{ZhuLogCanoincalThresholdsInPositiveChar} that the log canical threshold of $h$ at least the $F$-pure threshold of any reduction $h_p$.  
 
-The $F$-pure threshold can also be used to provide a lower bound for the log canonical threshold in characteristic zero.  Indeed, Z.~Zhu showed in \cite[Corollary 4.2]{ZhuLogCanoincalThresholdsInPositiveChar} that if $f \in \bQ[x_1, \dots, x_n]$ is reduced modulo $p > 0$ to obtain $f_p = f\;\mathrm{mod}\;p \in \bF_p[x_1, \dots, x_n]$, then $\fpt(f_p) \leq \lct(f)$.  There is a general purpose implementation of log canonical thresholds in the \emph{Dmodules} package by A.~Leykin and H.~Tsai \cite{DmodulesSource} and a package \emph{MultiplierIdeals} by Z.~Teitler, B.~Snapp and C.~Raicu \cite{MultiplierIdealsPackage}, which computes log canonical thresholds for special cases (monomial ideals, hyperplane arrangements, generic determinantal ideals, and certain binomial ideals), see also the paper \cite{MultiplierIdealsArticle}.  However, our general purpose implementation of ${\tt fpt}$ in small characteristic is typically much faster than {\tt lct}, the general purpose function from \emph{Dmodules} which computes the log canonical threshold.
+This latter result is interesting from a computational perspective, in that it provides lower bounds for log canonical thresholds.  Furthermore, though there is a general purpose implementation of an algorithm for computing log canonical thresholds in the \emph{Dmodules} package by A.~Leykin and H.~Tsai \cite{DmodulesSource}, it happens that the function for computing $F$-pure thresholds contained in the \emph{FrobeniusThresholds} package is typically much faster, especially so in lower characteristic.  Note that the  \emph{MultiplierIdeals}  package  by Z.~Teitler, B.~Snapp and C.~Raicu also computes log canonical thresholds in many special cases, including monomial ideals, hyperplane arrangements, generic determinantal ideals, and certain binomial ideals \cite{MultiplierIdealsPackage, MultiplierIdealsArticle}.
+
+In summary,  the $F$-pure threshold is an interesting numerical invariant, and is related to many other such measures of singularity across all characteristics.  Unfortunately, it is typically difficult to calculate, even in many concrete cases.  Nevertheless, $F$-pure thresholds have been the focus of intense study over the past 15 years, and the package \emph{FrobeniusThresholds} is centered on calculating and estimating the $F$-pure threshold and other $F$-thresholds, with the function {\tt fpt} at its core.
 
 \subsection*{Some background and notation}
 It is important to note that much of the functionality implemented in the \emph{FrobeniusThresholds} is not restricted to regular ambient rings; see Section \ref{sec.IsFPT} for a prominent example of this.
